# verifimind-mcp-server

./: Dockerfile  README.md  genesis-master-prompts-v2.0-en.md  http_server.py  mcp-server-card.json  pyproject.toml  reflexion-master-prompts-v1.1.md  smithery.yaml
.macp/guides/: MCP_Multi_Project_Assessment.md  MarketPulse_CN_v6.0_Design_Document.md  Mr_Market_US_Design_Document.md  YSenseAI_Ecosystem_Map.md
.macp/validation/: ecosystem_cross_validation_feb2026.md
src/verifimind_mcp/: __init__.py  config_helper.py  server.py
src/verifimind_mcp/agents/: __init__.py  base_agent.py  cs_agent.py  x_agent.py  z_agent.py
src/verifimind_mcp/config/: __init__.py  standard_config.py
src/verifimind_mcp/llm/: __init__.py  provider.py
src/verifimind_mcp/models/: __init__.py  concepts.py  reasoning.py  results.py
src/verifimind_mcp/utils/: __init__.py  metrics.py  retry.py  synthesis.py
