[project]
name = "verifimind-mcp"
version = "0.1.0"
description = "Model Context Protocol server for VerifiMind-PEAS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.0.0",
    "httpx>=0.24.1",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "smithery>=0.4.4",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/verifimind_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
